<resources>
    <string name="app_name">SDP01</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_network">Error with Network</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="error_phone_invalid">This phone number is invalid.</string>
    <string name="error_registered_email">This email address is already registered.</string>
    <string name="title_activity_main_user">MainUserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_todelete">Map</string>
</resources>
